@@ -1,4 +1,8 @@
-﻿drkns 26.11.2013 23:03:45 +0200 - build 3725
+﻿drkns 27.11.2013 21:13:16 +0200 - build 3726
+
+1. 0002535: Crash при открытии History в маленьком EditBox
+
+drkns 26.11.2013 23:03:45 +0200 - build 3725
 
 1. Пара уточнений 3723.
 
